@startuml

title __FRAGMENTS's Class Diagram__\n

  namespace ru.omegapps.wisherapp {
    namespace fragments {
      class ru.omegapps.wisherapp.fragments.HomeFragment {
          ~ currentUser : FirebaseUser
          ~ mAuth : FirebaseAuth
          ~ plusButton : FloatingActionButton
          ~ progressBar : RelativeLayout
          ~ recyclerView : RecyclerView
          ~ wishRef : DatabaseReference
          ~ wishes : ArrayList<Wish>
          {static} - ARG_PARAM1 : String
          {static} - ARG_PARAM2 : String
          {static} - WISH_KEY : String
          - mParam1 : String
          - mParam2 : String
          + HomeFragment()
          {static} + newInstance()
          + onCreate()
          + onCreateView()
          + onMyItemClick()
          + onMyItemLongClick()
          + onStart()
          + onViewCreated()
          - deleteWishByPosition()
      }
    }
  }
  

  namespace ru.omegapps.wisherapp {
    namespace fragments {
      class ru.omegapps.wisherapp.fragments.WishBlocksFragment {
          ~ progressBar : RelativeLayout
          ~ wishBlocks : ArrayList<WishBlock>
          {static} - PUBLIC_WB_KEY : String
          {static} - WBLOCK_KEY : String
          - childEventListener : ChildEventListener
          - currentUser : FirebaseUser
          - mAuth : FirebaseAuth
          - publicWishBlockRef : DatabaseReference
          - valueEventListener : ValueEventListener
          - wishBlockRef : DatabaseReference
          + onCreate()
          + onCreateView()
          + onStop()
          - deleteWishBlockByPosition()
          - goToEditWB()
          - showAlertDialogToDeleteWishBlock()
      }
    }
  }
  

  ru.omegapps.wisherapp.fragments.HomeFragment .up.|> ru.omegapps.wisherapp.interfaces.OnMyItemClickListener
  ru.omegapps.wisherapp.fragments.HomeFragment .up.|> ru.omegapps.wisherapp.interfaces.OnMyItemLongClickListener
  ru.omegapps.wisherapp.fragments.HomeFragment -up-|> androidx.fragment.app.Fragment
  ru.omegapps.wisherapp.fragments.WishBlocksFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
